# Pingpong

./: .gitignore  .prettierrc.json  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cargo_config.toml  check.sh  getReleaseInfo.sh  release.yml
config/: pingpong.toml  proxy.toml  server.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/locale/: en.ts
docs/.vitepress/theme/: index.ts  style.css
docs/configuration/: command-line-arguments.md  config-file.md  location.md  rewrite.md  server.md  source.md
docs/getting-started/: getting-started.md  introduction.md
html/: index.html
src/: gateway.rs  main.rs
src/config/: config.rs  import_able.rs  location.rs  mod.rs  proxy.rs  rewrite.rs  server.rs  source.rs  static_server.rs
src/util/: file_err.rs  mime.rs  mod.rs  path.rs  route.rs
src/util/url/: enc.rs  mod.rs
