[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4.21"
pingora = { version = "0.1.0", features = ["proxy", "lb"] }
structopt = "0.3.26"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
simplelog = "0.12.2"
