[package]
name = "pingpong"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
log = "0.4.21"
pingora = { version = "0.1.1", features = ["proxy", "lb"] }
structopt = "0.3.26"
toml = "0.8.12"
serde = { version = "1.0.198", features = ["derive"] }
simplelog = "0.12.2"
anyhow = "1.0.82"
regex = "1.10.4"
http = "1.1.0"
urlencoding = "2.1.3"

[profile.minimum]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1