[package]
name = "pingpong"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
log = "0.4.27"
pingora = { version = "0.5.0", features = ["proxy", "lb", "openssl"] }
structopt = "0.3.26"
toml = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
simplelog = "0.12.2"
anyhow = "1.0.98"
regex = "1.11.1"
http = "1.3.1"
urlencoding = "2.1.3"
once_cell = "1.21.3"

[profile.minimum]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1
